adding auth token from cookie to header